# cplusplus_2015_2016

./: CMakeLists.txt  README.md
assignment1/: main.cpp
assignment1/solution/: assignment1.cpp  assignment1.h  assignment1Main.cpp
assignment2/: main.cpp
assignment2/res/: compressed.txt  decompressed.txt
assignment2/solution/: MyCompress.cpp
assignment3/: BasicLCG.cpp  BasicLCG.h  Menu.cpp  Menu.h  World.cpp  World.h  main.cpp
assignment3/solution/: life.cpp
assignment4/: CMakeLists.txt  LargeNumber.cpp  LargeNumber.h  Math.cpp  Math.h  Number.cpp  Number.h  README.md  SmallNumber.cpp  SmallNumber.h  main.cpp  test.txt
assignment4/assignment/: CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.h  LargeNumber.cpp  LargeNumber.h  Math.cpp  Math.h  Number.cpp  Number.h  SmallNumber.h
assignment4/test/: CMakeLists.txt
assignment4/test/basic_tests/: CMakeLists.txt  large_number_check.cpp  math_check.cpp  small_number_check.cpp
